syntax = "proto3";

package pb;
option go_package = "internal/grpc/pb";

import "user.proto";
import "create_user.proto";
import "get_user.proto";
import "login_user.proto";
import "refresh_token.proto";

service AuthService {
  rpc Register(RegisterUserRequest) returns (RegisterUserResponse) {}
  rpc Login(LoginUserRequest) returns (LoginUserResponse) {}
  rpc GetList(UserListParams) returns (ArrayUser) {}
  rpc GetByID(ID) returns (User) {}

  rpc RefreshAccessToken(AccessTokenRequest) returns (AccessTokenResponse) {}

  rpc Me(Empty) returns (User) {}
}

message ID {
  string id = 1;
}

message Empty {}
