syntax = "proto3";

package pb;
option go_package = "internal/grpc/pb";

message Pagination {
  optional string orderBy = 1;
  optional uint32 offset = 2;
  optional uint32 size = 3;
}
