syntax = "proto3";

package pb;
option go_package = "internal/grpc/pb";

import "user.proto";

import "google/protobuf/timestamp.proto";

message RegisterUserRequest {
  string login = 1;
  string password = 2;
  string firstname = 3;
  string lastname = 4;
  string email = 5;
  string gender = 6;
  repeated string roleIDs = 7;
  google.protobuf.Timestamp birthdate = 8;
}

message RegisterUserResponse {
  User user = 1;
}
