syntax = "proto3";

package pb;

import "user.proto";

option go_package = "internal/grpc/pb";


import "google/protobuf/timestamp.proto";

message LoginUserRequest {
  string login = 1;
  string password = 2;
}

message LoginUserResponse {
  User user = 1;
  string publicToken = 2;
  google.protobuf.Timestamp publicExpiresAt = 3;
}
