syntax = "proto3";

package pb;

option go_package = "internal/grpc/pb";

import "google/protobuf/timestamp.proto";


message AccessTokenRequest {
  string refreshToken = 1;
}

message AccessTokenResponse {
  string accessToken = 1;
  google.protobuf.Timestamp expiresAt = 2;
}
